--- a/index.html
+++ b/index.html
@@ -65,18 +65,18 @@
   </nav>
   <main class="page landing-page" , id="main">
     <section class="clean-block clean-hero" style="
-          background-image: url('assets/img/tech/image4.jpg');
-          color: rgba(9, 162, 255, 0.85);
+          background-image: url('assets/img/main_bg.jpg');
+          color: rgba(9, 162, 255, 0.15);
         ">
       <div class="text">
-        <h2>John Bulick, a Handyman You Can Trust</h2>
-        <p>
-          A former Firefighter turned Handyman, John Bulick has been serving the community for over 20 years. He is a
-          licensed and insured contractor who is ready to help you with your next project.
+        <h1 style="color:#0d6efd; background-color:white;"><a href="tel:+17783193100">John bulick</a>, a Handyman You Can Trust</h1>
+        <p style="color:#0d6efd; background-color:white;">
+          A firefighter, a handyman, John bulick has been serving the community for over 20 years. He is ready to help
+          you with your next project.
         </p>
-        <button class="btn btn-outline-light btn-lg" type="button">
-          <a href="#info">Learn More</a>
-        </button>
+        <!-- <button class="btn btn-outline-light btn-lg" type="button">
+          <a href="#services" style="background-color:white;">Learn More</a>
+        </button> -->
       </div>
     </section>
     <section class="clean-block" id="services">
@@ -92,7 +92,8 @@
             <i class="icon-bulb icon"></i>
             <h4>General Repairs</h4>
             <p>
-              Fixing leaks, repairing broken tiles, patching up walls, and fixing doors or windows that don't close properly.
+              Fixing leaks, repairing broken tiles, patching up walls, and fixing doors or windows that don't close
+              properly.
             </p>
           </div>
           <div class="col-md-5 feature-box">
@@ -111,9 +112,9 @@
           </div>
           <div class="col-md-5 feature-box">
             <i class="icon-refresh icon"></i>
-            <h4>Home Maintenance</h4>
+            <h4>Custom Projects</h4>
             <p>
-              Gutter cleaning, pressure washing, and general upkeep.
+              Custom home projects, like building unique storage solutions or minor remodeling tasks
             </p>
           </div>
         </div>
@@ -129,60 +130,62 @@
           <div class="row projects">
             <div class="col-sm-6 item card border-info bg-light">
               <div class="row card-body">
-                <div class="col-md-12 col-lg-5">
-                  <a href="#"><img class="img-fluid" src="assets/img/desk.jpg" /></a>
+                <div class="col-md-12 col-lg-6">
+                  <a><img class="img-fluid" src="assets/img/project2.png" /></a>
                 </div>
                 <div class="col">
-                  <h3 class="name">Project Name</h3>
+                  <h3 class="name">Drywall Repairing</h3>
                   <hr />
                   <p class="description">
-                    Aenean tortor est, vulputate quis leo in, vehicula rhoncus
-                    lacus. Praesent aliquam in tellus eu gravida.
+                    Address issues such as holes, cracks, water damage, and general wear and tear in the drywall.
+                    Ensures the restoration of walls and ceilings to a pristine condition, enhancing both the aesthetic
+                    and structural integrity of the home.
                   </p>
                 </div>
               </div>
             </div>
             <div class="col-sm-6 item card border-info bg-light">
               <div class="row card-body">
-                <div class="col-md-12 col-lg-5">
-                  <a href="#"><img class="img-fluid" src="assets/img/building.jpg" /></a>
+                <div class="col-md-12 col-lg-8">
+                  <a><img class="img-fluid" src="assets/img/project1.png" /></a>
                 </div>
                 <div class="col">
-                  <h3 class="name">Project Name</h3>
+                  <h3 class="name">Floor Installation</h3>
                   <hr />
                   <p class="description">
-                    Aenean tortor est, vulputate quis leo in, vehicula rhoncus
-                    lacus. Praesent aliquam in tellus eu gravida.
+                    Remove the existing flooring, prepare the subfloor, and install new flooring material as chosen by
+                    the homeowner.
                   </p>
                 </div>
               </div>
             </div>
             <div class="col-sm-6 item card border-info bg-light">
               <div class="row card-body">
-                <div class="col-md-12 col-lg-5">
-                  <a href="#"><img class="img-fluid" src="assets/img/loft.jpg" /></a>
+                <div class="col-md-12 col-lg-6">
+                  <a><img class="img-fluid" src="assets/img/project3.jpg" /></a>
                 </div>
                 <div class="col">
-                  <h3 class="name">Project Name</h3>
+                  <h3 class="name">Basic Carpentry</h3>
                   <hr />
                   <p class="description">
-                    Aenean tortor est, vulputate quis leo in, vehicula rhoncus
-                    lacus. Praesent aliquam in tellus eu gravida.
+                    Customized drawer, shelves and closet building and installation. Tailored to meet the specific
+                    storage and aesthetic needs of the client, this service aims to enhance the functionality and visual
+                    appeal of living spaces through skillful craftsmanship.
                   </p>
                 </div>
               </div>
             </div>
             <div class="col-sm-6 item card border-info bg-light">
               <div class="row card-body">
-                <div class="col-md-12 col-lg-5">
-                  <a href="#"><img class="img-fluid" src="assets/img/minibus.jpeg" /></a>
+                <div class="col-md-12 col-lg-6">
+                  <a><img class="img-fluid" src="assets/img/project4.jpeg" /></a>
                 </div>
                 <div class="col">
-                  <h3 class="name">Project Name</h3>
+                  <h3 class="name">Furniature Assembly and Installation</h3>
                   <hr />
                   <p class="description">
-                    Aenean tortor est, vulputate quis leo in, vehicula rhoncus
-                    lacus. Praesent aliquam in tellus eu gravida.
+                    Professional assistance in setting up furniatures, ensuring safe and proper assembly, especially for
+                    those needs to be anchored to the wall for safety.
                   </p>
                 </div>
               </div>
@@ -192,26 +195,16 @@
       </section>
     </section>
     <section class="about-us" id="callme">
-      <div class="container">
-        <div class="block-heading">
+      <div class="container" style="text-align: center;">
+        <div class="block-heading" style="margin: auto;">
           <h2 class="text-info">Contact John Bulik</h2>
         </div>
-        <div class="row justify-content-center">
-          <div class="row align-items-center">
-            <div class="col-md-8">
-              <img class="img-thumbnail" src="assets/img/scenery/image5.jpg" />
-            </div>
-            <div class="col-md-4">
-              <h3>Contact me</h3>
-              <a href="mailto: jwbulick@hotmail.com"><button class="btn btn-outline-primary btn-lg" type="button">Email me</button></a>
-              <p></p>
-              <a href="tel:+17783193100"><button class="btn btn-outline-primary btn-lg" type="button">Call me</button> </a>
-            </div>
-          </div>
+        <div class="column justify-content-center" style="display: flex; justify-content: normal; align-items: stretch; flex-direction: row; margin: auto;">
+          <a href="mailto: jwbulick@hotmail.com"><button class="btn btn-outline-primary btn-lg" type="button">Email me</button></a>
+          <a href="tel:+17783193100"><button class="btn btn-outline-primary btn-lg" type="button">Call me</button></a>
         </div>
       </div>
-      </div>
-    </section>
+    </section>    
   </main>
   <!----------------Page Footer------------------->
   <footer class="page-footer dark">
