remove footer for now

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     </section>    
   </main>
   <!----------------Page Footer------------------->
-  <footer class="page-footer dark">
+  <!-- <footer class="page-footer dark">
     <div style="padding-left: 40vw; font-weight: 600">
       © 2021 Copyright JB-Services
     </div>
@@ -215,7 +215,7 @@
     <!-- <div class="footer-copyright bg-primary my-5">
             
         </div> -->
-  </footer>
+  </footer> -->
   <!----------------Page Footer------------------->
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
