--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     <section class="about-us" id="callme">
       <div class="container" style="text-align: center;">
         <div class="block-heading" style="margin: auto;">
-          <h2 class="text-info">Contact John Bulik</h2>
+          <h2 class="text-info">Contact John bulick</h2>
         </div>
         <div class="column justify-content-center" style="display: flex; justify-content: normal; align-items: stretch; flex-direction: row; margin: auto;">
           <a href="mailto: jwbulick@hotmail.com"><button class="btn btn-outline-primary btn-lg" type="button">Email me</button></a>
