--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <a class="nav-link" href="#projects">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#callme">Call Me</a>
+            <a class="nav-link" href="#callme">Contact Me</a>
           </li>
           <!-- <li class="nav-item">
               <a class="nav-link" href="registration.html">Sign Up</a>
@@ -69,10 +69,10 @@
           color: rgba(9, 162, 255, 0.15);
         ">
       <div class="text">
-        <h1 style="color:#0d6efd; background-color:white;"><a href="tel:+17783193100">John bulick</a>, a Handyman You Can Trust</h1>
+        <h1 style="color:#0d6efd; background-color:white;"><a href="tel:+17783193100">John Bulick</a>, a Handyman You
+          Can Trust</h1>
         <p style="color:#0d6efd; background-color:white;">
-          A firefighter, a handyman, John bulick has been serving the community for over 20 years. He is ready to help
-          you with your next project.
+          As a handyman, John Bulick has over 30 years of renovation and property maintenance experiences.
         </p>
         <!-- <button class="btn btn-outline-light btn-lg" type="button">
           <a href="#services" style="background-color:white;">Learn More</a>
@@ -162,7 +162,7 @@
             <div class="col-sm-6 item card border-info bg-light">
               <div class="row card-body">
                 <div class="col-md-12 col-lg-6">
-                  <a><img class="img-fluid" src="assets/img/project3.jpg" /></a>
+                  <a><img class="img-fluid" src="assets/img/project3.png" /></a>
                 </div>
                 <div class="col">
                   <h3 class="name">Basic Carpentry</h3>
@@ -181,10 +181,10 @@
                   <a><img class="img-fluid" src="assets/img/project4.jpeg" /></a>
                 </div>
                 <div class="col">
-                  <h3 class="name">Furniature Assembly and Installation</h3>
+                  <h3 class="name">Furniture Assembly and Installation</h3>
                   <hr />
                   <p class="description">
-                    Professional assistance in setting up furniatures, ensuring safe and proper assembly, especially for
+                    Professional assistance in setting up furnitures, ensuring safe and proper assembly, especially for
                     those needs to be anchored to the wall for safety.
                   </p>
                 </div>
@@ -195,16 +195,33 @@
       </section>
     </section>
     <section class="about-us" id="callme">
-      <div class="container" style="text-align: center;">
-        <div class="block-heading" style="margin: auto;">
-          <h2 class="text-info">Contact John bulick</h2>
-        </div>
-        <div class="column justify-content-center" style="display: flex; justify-content: normal; align-items: stretch; flex-direction: row; margin: auto;">
-          <a href="mailto: jwbulick@hotmail.com"><button class="btn btn-outline-primary btn-lg" type="button">Email me</button></a>
-          <a href="tel:+17783193100"><button class="btn btn-outline-primary btn-lg" type="button">Call me</button></a>
-        </div>
-      </div>
-    </section>    
+      <!DOCTYPE html>
+      <html>
+      <head>
+          <title>John's Profile</title>
+      </head>
+      <body>
+          <div style="display: flex; align-items: center; justify-content: center;">
+              <!-- Image Section -->
+              <div style="flex: 1; display: flex; justify-content: center; align-items: center;">
+                  <img class="img-fluid" src="assets/img/john_photo.jpeg" alt="John's Photo" style="max-width: 100%; max-height: 600px; width: auto; height: auto;">
+              </div>
+              <!-- Text Section -->
+              <div style="flex: 1; text-align: left; padding: 20px;">
+                  <h2 class="text-info" style="color: #17a2b8;">More about John</h2>
+                  <p>I have worked for the top property management companies in the lower mainland.</p>
+                  <p>I am committed to continual improvement: have taken BCIT courses in home inspection, residential framing, and forming carpentry as well.</p>
+                  <p>When I'm not renovating, I enjoy spending time with my lab, Casey, and my Mexican rescue Ollie, hiking the North Shore mountains, playing hockey, pickleball, and spending time with friends and family, and volunteering in my community.</p>
+                  <div>
+                      <a href="mailto:jwbulick@hotmail.com"><button style="margin-right: 10px; border: 1px solid #007bff; color: #007bff; padding: 10px 20px; font-size: 1.25rem; border-radius: 0.3rem;">Email me</button></a>
+                      <a href="tel:+17783193100"><button style="border: 1px solid #007bff; color: #007bff; padding: 10px 20px; font-size: 1.25rem; border-radius: 0.3rem;">Call me</button></a>
+                  </div>
+              </div>
+          </div>
+      </body>
+      </html>
+      
+    </section>
   </main>
   <!----------------Page Footer------------------->
   <!-- <footer class="page-footer dark">
