spelling mistake renn

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                   <a><img class="img-fluid" src="assets/img/project1.png" /></a>
                 </div>
                 <div class="col">
-                  <h3 class="name">Fireplace Rennovation</h3>
+                  <h3 class="name">Fireplace Renovation</h3>
                   <hr />
                   <h2 class="description">
                     This project involves the complete renovation of an existing fireplace. The work includes cleaning and repairing the firebox, updating the mantel and hearth for a modern look, and installing energy-efficient fire inserts. Special attention is given to ensuring the fireplace's safety and compliance with local building codes, while enhancing its efficiency and aesthetic appeal.
@@ -183,7 +183,7 @@
                   <a><img class="img-fluid" src="assets/img/project3.png" /></a>
                 </div>
                 <div class="col">
-                  <h3 class="name">Kitchen Rennovation</h3>
+                  <h3 class="name">Kitchen Renovation</h3>
                   <hr />
                   <p class="description">
                     This project involves the complete renovation of an existing kitchen. The work includes removing the
