--- a/index.html
+++ b/index.html
@@ -207,6 +207,20 @@
                 </div>
               </div>
             </div>
+            <div class="col-sm-12 item card border-info bg-light">
+              <div class="row card-body">
+                <div class="col-md-12 col-lg-9">
+                  <a><img class="img-fluid" src="assets/img/project5.png" /></a>
+                </div>
+                <div class="col">
+                  <h3 class="name">More Furniture Assembly and Installation</h3>
+                  <hr />
+                  <p class="description">
+                    This project involves assembling and installing furniture as chosen by the homeowner. The image shows the installation of a floating bench.
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
     </section>
