update murphy bed installation details

--- a/index.html
+++ b/index.html
@@ -199,10 +199,10 @@
                   <a><img class="img-fluid" src="assets/img/project4.png" /></a>
                 </div>
                 <div class="col">
-                  <h3 class="name">Furniture Assembly and Installation</h3>
+                  <h3 class="name">Floating Bench Installation</h3>
                   <hr />
                   <p class="description">
-                    This project involves assembling and installing furniture as chosen by the homeowner. The image shows the installation of a floating bench.
+                    This project involves assembling and installing a floating bench as chosen by the homeowner. The image shows the installation of a floating bench.
                   </p>
                 </div>
               </div>
@@ -213,10 +213,10 @@
                   <a><img class="img-fluid" src="assets/img/project5.png" /></a>
                 </div>
                 <div class="col">
-                  <h3 class="name">More Furniture Assembly and Installation</h3>
+                  <h3 class="name">Murphy Bed Installation</h3>
                   <hr />
                   <p class="description">
-                    This project involves assembling and installing furniture as chosen by the homeowner. The image shows the installation of a floating bench.
+                    Complete Murphy bed build from scratch, securely mounted to the structure, with custom design, quality materials, and reliable lift mechanism. Includes seamless cabinetry, finishing to match room decor, and safety checks for stability and durability.
                   </p>
                 </div>
               </div>
