update JB's intro

--- a/index.html
+++ b/index.html
@@ -240,9 +240,9 @@
               <!-- Text Section -->
               <div style="flex: 1; text-align: left; padding: 20px;">
                   <h2 class="text-info" style="color: #17a2b8;">More about John</h2>
-                  <p>I have worked for the top property management companies in the lower mainland.</p>
-                  <p>I am committed to continual improvement: have taken BCIT courses in home inspection, residential framing, and forming carpentry as well.</p>
-                  <p>When I'm not renovating, I enjoy spending time with my lab, Casey, and my Mexican rescue Ollie, hiking the North Shore mountains, playing hockey, pickleball, and spending time with friends and family, and volunteering in my community.</p>
+                  <p>My introduction to the trades was a labourer for a masonry company in Ontario over 30 years ago, I realized that by being proactive and paying attention and working hard I could advance , I eventually was offered an apprentice  position and enjoyed learning about the building industry . Since then I have worked for several top construction companies as a framer , lead hand , trim carpenter and eventually running my own residential and commercial property maintenance company</p> 
+                  <p>I have taken advantage of continuing education over the years as well , I have taken residential framing and forming courses through BCIT and property inspection courses and BC building code courses to stay current and able to serve my clients to the highest standards.</p>
+                  <p>Contact me to see how my experience can help keep your investment at the highest standard.</p>
                   <div>
                       <a href="mailto:jwbulick@hotmail.com"><button style="margin-right: 10px; border: 1px solid #007bff; color: #007bff; padding: 10px 20px; font-size: 1.25rem; border-radius: 0.3rem;">Email me</button></a>
                       <a href="tel:+17783193100"><button style="border: 1px solid #007bff; color: #007bff; padding: 10px 20px; font-size: 1.25rem; border-radius: 0.3rem;">Call me</button></a>
