--- a/index.html
+++ b/index.html
@@ -139,6 +139,36 @@
         </div>
       </div>
     </section>
+    <section class="clean-block" id="testimonials">
+      <div class="container">
+        <div class="block-heading">
+          <h2 class="text-info">Testimonials</h2>
+          <p>
+            Listen to what my customers said.
+          </p>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-5 feature-box">
+            <i class="icon-star icon"></i>
+            <h4>Our Go-To Person!</h4>
+            <p>
+              "John has been our go-to person for any repairs, building or "handywork" we've needed done around the house for the past six years! His work is high-quality and his skill set is robust. From building and installing our murphy bed, TVs and shelving, to fixing kitchen and bathroom fixtures, we've always been impressed by his reliability and quality of work. We'd highly recommend John's services."
+            </p>
+            <p>-- Jeniffer and Ali</p>
+          </div>
+          <div class="col-md-5 feature-box">
+            <i class="icon-heart icon"></i>
+            <h4>Great Job Each and Every Time!</h4>
+            <p>
+              "John is our go to handyman for any of our office maintenance needs. He is always timely in the projects he takes on and does a great job each and every time. John's communication and pricing are exceptional and he always goes above and beyond to ensure the project is properly completed. We highly recommend John for any maintenance jobs!" 
+            </p>
+            <p>-- Melissa V.
+              Nine point agency .
+              Vancouver.</p>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="projects-horizontal" id="projects">
         <div class="container">
           <div class="intro">
