add link to testimonial

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
             <a class="nav-link" href="#services">Services</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="#testimonials">Testimonials</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#projects">Projects</a>
           </li>
           <li class="nav-item">
@@ -289,6 +292,9 @@
     <div style="padding-left: 40vw; font-weight: 600">
       © 2024 Copyright JB-Services
     </div>
+    <!-- <div style="padding-left: 41vw; font-weight: 200">
+      Website Created by <a href="https://www.linkedin.com/in/rongpengli/">Ron</a>
+    </div> -->
   </footer>
   <!----------------Page Footer------------------->
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
